--- a/.github/workflows/ai-review-workflow.yaml
+++ b/.github/workflows/ai-review-workflow.yaml
@@ -8,7 +8,8 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Run AI Code Review Agent
-        uses: Manav-Khandurie/agents/code-review-agent@code-review-agent-v1.0.3 # Stable tested 1.0.3
+        # uses: Manav-Khandurie/agents/code-review-agent@code-review-agent-v1.0.3 # Stable tested 1.0.3
+        uses: Manav-Khandurie/agents/code-review-agent@main # unstable
         with:
           config-path: "./ai-review.yaml"
           score-threshold: 85
