--- a/.github/workflows/ai-review-workflow.yaml
+++ b/.github/workflows/ai-review-workflow.yaml
@@ -7,6 +7,11 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v3
 
+      - name: Debug container contents
+        run: |
+          ls -la 
+          tree
+          
       - name: Run AI Code Review Agent
         # uses: Manav-Khandurie/agents/code-review-agent@code-review-agent-v1.0.3 # Stable tested 1.0.3
         uses: Manav-Khandurie/agents/code-review-agent@main # unstable
