--- a/ai-review.yaml
+++ b/ai-review.yaml
@@ -1,10 +1,10 @@
 model:
   provider:
-    type: deepseek
-  model_name: deepseek-chat
+    type: openai
+  model_name: gpt-4o-mini
+  region: us-east-1
   credentials:
-    api_key: ${DEEPSEEK_API_KEY}
-    api_base: https://api.deepseek.com/v1
+    api_key: ${OPEN_API_KEY}
 include:
   - "RAG"
   - "chatbots"
