--- a/.github/workflows/ai-review-workflow.yaml
+++ b/.github/workflows/ai-review-workflow.yaml
@@ -20,3 +20,6 @@ jobs:
           score-threshold: 85
         env:
           DEEPSEEK_API_KEY: ${{ secrets.DEEPSEEK_API_KEY }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          OPEN_API_KEY: ${{ secrets.OPEN_API_KEY }}
