--- a/ai-review.yaml
+++ b/ai-review.yaml
@@ -1,10 +1,11 @@
 model:
   provider:
-    type: openai
-  model_name: gpt-4o-mini
+    type: huggingface
+  model_name: microsoft/phi-4
   region: us-east-1
   credentials:
-    api_key: ${OPEN_API_KEY}
+    api_base: ${HF_API_BASE_PHI4}
+    api_key: ${HF_TOKEN}
 include:
   - "RAG"
   - "chatbots"
