--- a/ai-review.yaml
+++ b/ai-review.yaml
@@ -1,11 +1,11 @@
 model:
   provider:
-    type: huggingface
-  model_name: microsoft/phi-4
+    type: bedrock
+  model_name: amazon.titan-text-premier-v1:0
   region: us-east-1
   credentials:
-    api_base: ${HF_API_BASE_PHI4}
-    api_key: ${HF_TOKEN}
+    aws_access_key_id: ${AWS_ACCESS_KEY_ID}
+    aws_secret_access_key: ${AWS_SECRET_ACCESS_KEY}
 include:
   - "RAG"
   - "chatbots"
