--- a/ai-review.yaml
+++ b/ai-review.yaml
@@ -4,7 +4,7 @@ model:
   model_name: gpt-4o-mini
   region: us-east-1
   credentials:
-    api_key: ${OPENAI_API_KEY}
+    api_key: ${OPEN_API_KEY}
 include:
   - "RAG"
   - "chatbots"
