--- a/.github/workflows/ai-review-workflow.yaml
+++ b/.github/workflows/ai-review-workflow.yaml
@@ -7,21 +7,12 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v3
 
-      - name: Debug container contents
-        run: |
-          ls -la 
-          tree
-          
       - name: Run AI Code Review Agent
-        # uses: Manav-Khandurie/agents/code-review-agent@code-review-agent-v1.0.3 # Stable tested 1.0.3
-        uses: Manav-Khandurie/agents/code-review-agent@main # unstable
+        uses: Manav-Khandurie/agents/code-review-agent@code-review-agent-v1.1.0 # Stable tested 1.1.0
+        # uses: Manav-Khandurie/agents/code-review-agent@main # unstable
         with:
           config-path: "./ai-review.yaml"
           score-threshold: 75
         env:
-          DEEPSEEK_API_KEY: ${{ secrets.DEEPSEEK_API_KEY }}
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          OPEN_API_KEY: ${{ secrets.OPEN_API_KEY }}
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
-          HF_API_BASE_PHI4: ${{ secrets.HF_API_BASE_PHI4 }}
+          HF_API_BASE_GEMMA3: ${{ secrets.HF_API_BASE_GEMMA3 }}
