--- a/ai-review.yaml
+++ b/ai-review.yaml
@@ -1,10 +1,10 @@
 model:
   provider:
     type: huggingface
-  model_name: microsoft/phi-4
+  model_name: google/gemma-3-27b-it-fast
   region: us-east-1
   credentials:
-    api_base: ${HF_API_BASE_PHI4}
+    api_base: ${HF_API_BASE_GEMMA3}
     api_key: ${HF_TOKEN}
 include:
   - "RAG"
