--- a/.github/workflows/ai-review-workflow.yaml
+++ b/.github/workflows/ai-review-workflow.yaml
@@ -15,4 +15,4 @@ jobs:
           score-threshold: 75
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
-          HF_API_BASE_GEMMA3: ${{ secrets.HF_API_BASE_GEMMA3 }}
+          HF_API_BASE_DEEPSEEK_QWEN_1_5B: ${{ secrets.HF_API_BASE_DEEPSEEK_QWEN_1_5B }}
