--- a/ai-review.yaml
+++ b/ai-review.yaml
@@ -1,10 +1,10 @@
 model:
   provider:
     type: huggingface
-  model_name: google/gemma-3-27b-it-fast
+  model_name: deepseek-ai/DeepSeek-R1-Distill-Qwen-1.5B
   region: us-east-1
   credentials:
-    api_base: ${HF_API_BASE_GEMMA3}
+    api_base: ${HF_API_BASE_DEEPSEEK_QWEN_1_5B}
     api_key: ${HF_TOKEN}
 include:
   - "RAG"
