--- a/.github/workflows/ai-commenter-bot.yaml
+++ b/.github/workflows/ai-commenter-bot.yaml
@@ -3,6 +3,7 @@ on:
   schedule:
     - cron: "0 1 * * *"  # Runs daily at 1AM UTC
   workflow_dispatch:  # Allows manual triggering of the workflow
+  push:
 
 jobs:
   auto-comment:
@@ -24,9 +25,10 @@ jobs:
           persist-credentials: false
 
       - name: Run Code Comment Bot
-        uses: Manav-Khandurie/auto-code-commenter@v1.2.0
+        uses: Manav-Khandurie/auto-code-commenter@main
         with:
-          config: "./ai-commenter.yaml"
           src: "RAG"
-        env:
-          DEEPSEEK_API_KEY: ${{ secrets.DEEPSEEK_API_KEY }}
+          provider: "deepseek"
+          model_name: "deepseek-chat"
+          api_key: ${{ secrets.DEEPSEEK_API_KEY }}
+          api_base: "https://api.deepseek.com/v1"
