--- a/.github/workflows/ai-commenter-bot.yaml
+++ b/.github/workflows/ai-commenter-bot.yaml
@@ -3,7 +3,6 @@ on:
   schedule:
     - cron: "0 1 * * *"  # Runs daily at 1AM UTC
   workflow_dispatch:  # Allows manual triggering of the workflow
-  push:
 
 jobs:
   auto-comment:
@@ -27,7 +26,7 @@ jobs:
       - name: Run Code Comment Bot
         uses: Manav-Khandurie/auto-code-commenter@main
         with:
-          src: "RAG"
+          src: "chatbots"
           provider: "deepseek"
           model_name: "deepseek-chat"
           api_key: ${{ secrets.DEEPSEEK_API_KEY }}
