--- a/.github/workflows/ai-commenter-bot.yaml
+++ b/.github/workflows/ai-commenter-bot.yaml
@@ -29,4 +29,4 @@ jobs:
           src: "src"
           provider: "openai"
           model_name: "gpt-4o-mini"
-          api_key: ${{ secrets.OPENAI_API_KEY }}
+          api_key: ${{ secrets.OPEN_API_KEY }}
