added new auto-code-commenter

--- a/.github/workflows/ai-commenter-bot.yaml
+++ b/.github/workflows/ai-commenter-bot.yaml
@@ -24,9 +24,10 @@ jobs:
           persist-credentials: false
 
       - name: Run Code Comment Bot
-        uses: Manav-Khandurie/auto-code-commenter@v1.3.0
+        uses: Manav-Khandurie/auto-code-commenter@main
         with:
-          src: "chatbots"
-          provider: "openai"
-          model_name: "gpt-4o-mini"
-          api_key: ${{ secrets.OPEN_API_KEY }}
+          src: "./RAG ./chatbots"
+          provider: "deepseek"
+          model_name: "deepseek-chat"
+          api_key: ${{ secrets.DEEPSEEK_API_KEY }}
+          api_base: "https://api.deepseek.com/v1"
