--- a/.github/workflows/ai-commenter-bot.yaml
+++ b/.github/workflows/ai-commenter-bot.yaml
@@ -24,7 +24,7 @@ jobs:
           persist-credentials: false
 
       - name: Run Code Comment Bot
-        uses: Manav-Khandurie/auto-code-commenter@main
+        uses: Manav-Khandurie/auto-code-commenter@v1.4.0
         with:
           src: "./RAG ./chatbots"
           provider: "deepseek"
