fixed deepseek config

--- a/.github/workflows/ai-comment-review-workflow.yml
+++ b/.github/workflows/ai-comment-review-workflow.yml
@@ -21,3 +21,9 @@ jobs:
           score-threshold: 85
         env:
           DEEPSEEK_API_KEY: ${{ secrets.DEEPSEEK_API_KEY }}
+
+      - name: Upload code_comment_review_result.json report
+        uses: actions/upload-artifact@v4
+        with:
+          name: code-comment-review-report
+          path: code_comment_review_result.json
