--- a/ai-review.yaml
+++ b/ai-review.yaml
@@ -1,11 +1,10 @@
 model:
   provider:
-    type: huggingface
-  model_name: deepseek-ai/DeepSeek-R1-Distill-Qwen-1.5B
-  region: us-east-1
+    type: deepseek
+  model_name: deepseek-chat
   credentials:
-    api_base: ${HF_API_BASE_DEEPSEEK_QWEN_1_5B}
-    api_key: ${HF_TOKEN}
+    api_key: ${DEEPSEEK_API_KEY}
+    api_base: https://api.deepseek.com/v1
 include:
   - "RAG"
   - "chatbots"
@@ -17,4 +16,5 @@ exclude:
   - "**/notebooks/"
   - "**/src/"
   - "src/*"
-score_threshold: 80
+score_threshold: 75
+ 
